--- a/demo.html
+++ b/demo.html
@@ -18,10 +18,12 @@
         document.querySelector("#welcome").innerHTML =
           "Welcome to my site " + name;
       }
-
       document
         .querySelector("#submit")
         .addEventListener("click", getAndDisplayName);
     </script>
+    <noscript>
+      <p>Code here only shown if JS turned off</p>
+    </noscript>
   </body>
 </html>
