--- a/Exercise 2/linked.html
+++ b/Exercise 2/linked.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="external.js"></script>
+    <script src="js/external.js"></script>
     <title>Exercise 2</title>
   </head>
   <body>
     <h1>Linked, Local and Inline</h1>
     <button
-      onclick="function sayHi() { alert('Hi from inline script!') } sayHi()"
+      click="function sayHi() { alert('Hi from inline script!') } sayHi()"
     >
       Say Hi
     </button>
